--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,21 +1,23 @@
 stages:
   data_ingestion:
-    cmd: python src/data_ingestion.py
+    cmd: .\dvc_pipeline\Scripts\python src\data_ingestion.py
     deps:
       - src/data_ingestion.py
     params:
       - data_ingestion
     outs:
       - data/raw
+
   data_pre-processing:
-    cmd: python src/data_pre-processing.py
+    cmd: .\dvc_pipeline\Scripts\python src\data_pre-processing.py
     deps:
       - data/raw
       - src/data_pre-processing.py
     outs:
       - data/interim
+
   feature_engineering:
-    cmd: python src/feature_engineering.py
+    cmd: .\dvc_pipeline\Scripts\python src\feature_engineering.py
     deps:
       - data/raw
       - src/feature_engineering.py
@@ -23,8 +25,9 @@ stages:
       - feature_engineering
     outs:
       - data/processed
+
   model_building:
-    cmd: python src/model_building.py
+    cmd: .\dvc_pipeline\Scripts\python src\model_building.py
     deps:
       - data/processed
       - src/model_building.py
@@ -32,8 +35,9 @@ stages:
       - model_building
     outs:
       - models/model.pkl
+
   model_evaluation:
-    cmd: python src/model_evaluation.py
+    cmd: .\dvc_pipeline\Scripts\python src\model_evaluation.py
     deps:
       - models/model.pkl
       - src/model_evaluation.py
